--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ table {
     margin: auto;
 }
 th{
-    padding: 20px;
+    width: 200px;
     border-bottom: solid 2px;
     border-left: solid 2px;
 }
@@ -25,6 +25,5 @@ td{
     border-left: solid 2px;
 }
 tfoot{
-    text-align:center;
     background-color: rgb(158, 158, 234);
 }
